--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body{ background-color: #777;}
     font-size: 18px;
     text-align: center;
     margin-bottom: 10px; margin-left: auto; margin-right: auto;
+    height: 60px;
+    padding-top: 20px;
 }
 
 #nav {
@@ -17,33 +19,78 @@ body{ background-color: #777;}
     width: 960px;
     font-size: 18px;
     text-align: center;
-    margin-bottom: 10px;margin-left: auto; margin-right: auto;} 
+    margin-bottom: 20px;margin-left: auto; margin-right: auto;
+    height: 60px;
+    padding-top: 20px;}     
 
- #aside {background-color: #ebebeb ; 
-        font-family: Arial, Helvetica, sans-serif; 
-        color: #777; 
-        width: 495px;
-        font-size: 18px;
-        text-align: center;
-    float: left; padding-right: 20px;}
+#page{ width: auto;
+margin: auto;
+width: 960px;}
 
-    #section {background-color: #ebebeb ; 
+    #section {
+    
+    background-color: #ebebeb ; 
     font-family: Arial, Helvetica, sans-serif; 
     color: #777; 
     width: 495px;
     font-size: 18px;
     text-align: center;
-float: left; padding-right: 20px;}
+    padding-right: 20px;
+    padding-top: 28px;
+    height: 313px;
+float: left;}
+
+#aside {background-color: #ebebeb ; 
+    font-family: Arial, Helvetica, sans-serif; 
+    color: #777; 
+    width: 419px;
+    font-size: 18px;
+    text-align: center;
+    height: 320px;
+    padding-top: 20px;
+    margin-left: 25px;
+    margin-bottom: 20px;
+float: left;
+}
+
+    #article { clear:both;
+        background-color: #777; 
+        color: #ebebeb;
+         margin-left: 19px; 
+        height: 190px;
+        padding-top: 17px;
+        margin-top: 65px;}
+    
+    #p{ margin-top: 10px;
+        margin-bottom: 10px; 
+        margin-left: 10px;
+        margin-right: 10px; 
+        background-color:  #ebebeb; 
+        color: #777; 
+    padding: 20px;}
+    
+    .h1{
+        margin-top: 10px;
+        margin-bottom: 10px; 
+        margin-left: 10px;
+        margin-right: 10px; 
+        background-color:  #ebebeb; 
+        color: #777; 
+    padding: 20px;;
+    }
+    
 
 
-#article { clear: both; background-color: #777; color: #ebebeb; margin-left: auto; margin-right: auto;}
-#p{ margin-top: 10px;margin-bottom: 10px;float:left; }
-
-#footer { 
+    #footer { 
     clear: both;
     background-color: #ebebeb ; 
     font-family: Arial, Helvetica, sans-serif; 
     color: #777; 
-    width: 960px;
+    width: 959px;
     font-size: 18px;
-    text-align: center; margin-left: auto; margin-right: auto;}
+    margin-top: 100px;
+    margin-left: 28;
+    text-align: center; 
+    padding-top: 22px;
+    height: 73px;
+    }
