--- a/style.css
+++ b/style.css
@@ -89,7 +89,8 @@ float: left;
     width: 959px;
     font-size: 18px;
     margin-top: 100px;
-    margin-left: 28;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center; 
     padding-top: 22px;
     height: 73px;
